--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
+    "iconsax-react": "^0.0.8",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "react": "^18",
