--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,10 @@
 {
   "tabWidth": 4,
   "semi": false,
-  "singleQuote": true,
+  "singleQuote": false,
   "trailingComma": "all",
   "arrowParens": "avoid",
   "jsxBracketSameLine": true
 }
+
+
