--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
+    "cookies-next": "^4.1.1",
     "iconsax-react": "^0.0.8",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
@@ -22,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
