--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@headlessui/react": "^1.7.18",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "cookies-next": "^4.1.1",
     "iconsax-react": "^0.0.8",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
+    "nextjs-toploader": "^1.6.6",
     "react": "^18",
     "react-dom": "^18"
   },
